# cfa-scoring-service

./: .gitignore  .pre-commit-config.yaml  DESCRIPTION  Dockerfile  NAMESPACE  README.md  hello.py  pyproject.toml  score.R
.github/workflows/: R-CMD-check.yaml  pre-commit.yaml  python.yaml
R/: azure.R  score.R
man/: cfascoring-package.Rd  download_file_from_container.Rd  download_if_specified.Rd  fetch_blob_container.Rd  fetch_credential_from_env_var.Rd  write_scores.Rd
src/utils/: az.py  nssp.py
tests/: conftest.py  test_nssp_utils.py
tests/data/: nssp_gold_test_data.parquet
