[project]
name = "cfa-scoring-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jax>=0.5.1",
    "polars>=1.23.0",
    "scikit-learn>=1.6.1",
    "typer>=0.15.1",
]

[dependency-groups]
dev = [
    "pre-commit>=4.1.0",
    "pytest>=8.3.4",
]
